sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: type int
var ecart=getNombreValeurs():int
                             ^AlgCombSort:14: error: not found: type int
		if(!plusPetit(i, i+ecart:int)){
                                         ^AlgCombSort:15: error: not found: type int
			echange(i,i+ecart:int)
                                          ^