sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart=getNombreValeurs():int
var x=1
var i=0
val div=1.3:Double
while((x!=0)||(ecart>1)){
	if(ecart>1){
		ecart=ecart  / div
		i=0
	}
	x=0
	while(i+ecart<getNombreValeurs()){
		if(!plusPetit(i, i+ecart:int)){
			echange(i,i+ecart:int)
			x=1
		}
			i+=1
	}
}
}
